--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "python.pythonPath": "c:\\Users\\Usuario\\Desktop\\WPy64-3940\\python-3.9.4.amd64\\python.exe"
+    "python.pythonPath": "c:\\Users\\Juan Jose\\Desktop\\Universidad\\programación\\WPy64-3940\\python-3.9.4.amd64\\python.exe"
 }
